# Refilling_air_conditioners

./: .gitignore  manage.py  pyproject.toml
car_services_project/: asgi.py  settings.py  urls.py  wsgi.py
locale/ru/LC_MESSAGES/: django.po
refilling_air_conditioners/: admin.py  apps.py  models.py  views.py
refilling_air_conditioners/migrations/: 0001_initial.py  0002_alter_contactinfo_options_and_more.py  0003_alter_service_options_service_service_name.py
refilling_air_conditioners/templates/: index.html
static/css/: style.css
static/js/: script.js
