[project]
name = "refilling-air-conditioners"
version = "0.1.0"
description = "Заправка кондиционеров"
authors = [
    {name = "miazigoo",email = "kasper6024@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2,<6.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "pillow (>=11.2.1,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
